@@ -944,8 +944,9 @@ show skip-trampoline-functions
   This setting is 'on' by default.  When 'on' it controls whether GDB will
   recognize function calls that have been marked as trampolines in the debug
   info.  It improves stepping behavior in that it steps over the trampoline
-  code and hides it from the user.  Currently, only DWARF trampolines are
-  supported.
+  code and hides it from the user.  It improves the printing of the stack by
+  hiding trampoline functions from the backtrace.  Currently, only DWARF
+  trampolines are supported.
 
   If this is turned off, GDB will handle @dfn{trampoline functions} the same
   as any other function.
